добавил эндпоинт get_user_by_email
